[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/ui/side1.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Node2D"]
position = Vector2( 1558, 785 )

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -156.0
margin_right = 190.0
margin_bottom = -13.0
alignment = 2

[node name="Play" type="Label" parent="Menu/Buttons"]
margin_top = 111.0
margin_right = 169.0
margin_bottom = 125.0
mouse_filter = 1
text = "PLAY"
uppercase = true

[node name="Exit" type="Label" parent="Menu/Buttons"]
margin_top = 129.0
margin_right = 169.0
margin_bottom = 143.0
mouse_filter = 1
text = "EXIT"
uppercase = true

[node name="Logo" type="TextureRect" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -112.0
margin_right = 3544.0
margin_bottom = 1346.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )

[node name="CreditText" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -199.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 14.0
text = "CREATED BY CLORO & ALUPIT"
align = 2

[node name="VersionText" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -199.0
margin_top = 25.0
margin_right = -6.0
margin_bottom = 39.0
text = "0.1.2"
align = 2

[node name="Credits" type="Panel" parent="Menu"]
light_mask = 3
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="Menu/Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -7.0
margin_right = -42.0
margin_bottom = 7.0
text = "CREATED BY"
valign = 1
uppercase = true

[node name="People" type="Label" parent="Menu/Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -15.5
margin_right = 23.0
margin_bottom = 15.5
text = "CLORO
ALUPIT"
align = 2
valign = 1
uppercase = true

[connection signal="gui_input" from="Menu/Buttons/Play" to="Menu" method="_on_Play_gui_input"]
[connection signal="gui_input" from="Menu/Buttons/Exit" to="Menu" method="_on_Exit_gui_input"]
